# Paralela

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  Readme.md  cmake_install.cmake  main.cpp  preprocess.cpp  rgba_to_grey.cu  script_ejecutar_todo.py  to_bw  total.txt  utils.h
Practica 1 POSIX/: LEEME  blur-effect  blur-effect.c  script_ejecutar_todo.py  total.txt
Practica 2 OPENMP/: blur-effect  blur-effect.c  script_ejecutar_todo.py  total.txt
Practica 3 CUDA/: Makefile  README.md  blur-effect  total.txt
